1.4/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend # УКАЖИТЕ: Метка, соответствующая backend Pods
  ports:
  - port: 80
    targetPort: 8080 # КЛЮЧЕВОЙ МОМЕНТ: Порт контейнера backend
