1.4/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend # УКАЖИТЕ: Метка, соответствующая frontend Pods
  ports:
  - port: 80
    targetPort: 80
